tests/fixtures/valid/modules/chained_imports/level1.py
def level1_func(x: int) -> int:
    return x + 1
