tests/fixtures/invalid/preprocessor/inconsistent_indent.py
def foo():
    x: int = 1
      y: int = 2
